# edp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
common/: annotation_batches.py  argo_workflows.py  audit.py  config.py  dagster_client.py  db.py  errors.py  execution_claim.py  iceberg.py  ingest_state.py  jobs.py  k8s_jobs.py  kafka_ledger.py  object_store.py  processing_registry.py  runtime_config.py  saga.py  search.py  strategy_registry.py  worker_pods.py
deploy/k8s/: 00-base.yaml  10-infra.yaml  20-apps.yaml  30-argo.yaml  31-argo-worker-template.yaml  apply.sh  dagster.yaml  workspace.yaml
docs/: argo-workflows-code-review.md  pipes-fanout-code-review.md  pod-fanout-guide.md  saga-consistency-guide.md
engines/duckdb/: analytics_summary.py  duckdb_conn.py  entity_tag.py
engines/ray/: annotation_auto.py  mock_train.py  prelabel.py  qc.py  ray_utils.py
engines/search/: tag_index.py
engines/spark/: export_dataset.py  freeze_dataset.py  ingest_append.py  ingest_common.py  ingest_correct.py  spark_session.py
engines/training/: run_job.py
engines/worker/: exit_policy.py  (+3 more)
gateway/: main.py  models.py
orchestration/: checks.py  compaction.py  definitions.py  jobs.py  partitions.py  reconciliation.py  resources.py  retention.py  schedules.py  sensors.py
schemas/: iceberg_tables.py  migrate_execution_claim.sql  migrate_processing_profiles.sql  postgres_platform.sql
tests/: test_argo_claim_finalize.py  test_gateway_session_state.py  test_processing_profiles.py  test_reconciliation.py
(+11 files in other folders)
